--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://swhxf.github.io/630project",
+  "homepage": "https://swhoxf.github.io/630project",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
